; ModuleID = '/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/crypto/extr_ms_funcs.c_old_nt_password_hash_encrypted_with_new_nt_password_hash.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/crypto/extr_ms_funcs.c_old_nt_password_hash_encrypted_with_new_nt_password_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @old_nt_password_hash_encrypted_with_new_nt_password_hash(i32* %0, i64 %1, i32* %2, i64 %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32*, align 8
  %12 = alloca [16 x i32], align 16
  %13 = alloca [16 x i32], align 16
  store i32* %0, i32** %7, align 8
  store i64 %1, i64* %8, align 8
  store i32* %2, i32** %9, align 8
  store i64 %3, i64* %10, align 8
  store i32* %4, i32** %11, align 8
  %14 = load i32*, i32** %9, align 8
  %15 = load i64, i64* %10, align 8
  %16 = getelementptr inbounds [16 x i32], [16 x i32]* %12, i64 0, i64 0
  %17 = call i64 @nt_password_hash(i32* %14, i64 %15, i32* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %25, label %19

19:                                               ; preds = %5
  %20 = load i32*, i32** %7, align 8
  %21 = load i64, i64* %8, align 8
  %22 = getelementptr inbounds [16 x i32], [16 x i32]* %13, i64 0, i64 0
  %23 = call i64 @nt_password_hash(i32* %20, i64 %21, i32* %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %26

25:                                               ; preds = %19, %5
  store i32 -1, i32* %6, align 4
  br label %31

26:                                               ; preds = %19
  %27 = getelementptr inbounds [16 x i32], [16 x i32]* %12, i64 0, i64 0
  %28 = getelementptr inbounds [16 x i32], [16 x i32]* %13, i64 0, i64 0
  %29 = load i32*, i32** %11, align 8
  %30 = call i32 @nt_password_hash_encrypted_with_block(i32* %27, i32* %28, i32* %29)
  store i32 0, i32* %6, align 4
  br label %31

31:                                               ; preds = %26, %25
  %32 = load i32, i32* %6, align 4
  ret i32 %32
}

declare dso_local i64 @nt_password_hash(i32*, i64, i32*) #1

declare dso_local i32 @nt_password_hash_encrypted_with_block(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
